--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -1,5 +1,27 @@
-.home {
-  font-size: 30;
-  color: red;
-  padding: 20px;
+.home-back {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu {
+  display: inline-block;
+  position: absolute;
+  width: 10%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #303133;
+}
+
+.el-menu {
+  border-right: 0 !important;
+}
+
+.container {
+  display: inline-block;
+  position: absolute;
+  width: 90%;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
